
abstract class Entity {

    int pv, atk, def;
    String nom;

}