

public interface EntityInterface {

    int getPv();

    void setPv(int pv);

    int getAtk();

    void setAtk(int atk);

    int getDef();

    void setDef(int def);

    String getNom();

    void setNom(String nom);

}
