
public enum GameState {
    MENU, CLASSE, PLAYING, PAUSE, END, GAME_OVER;
}